--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@internationalized/date": "^3.5.4",
+    "@nextui-org/button": "^2.0.33",
+    "@nextui-org/calendar": "^2.0.6",
+    "@nextui-org/react": "^2.4.1",
+    "@nextui-org/system": "^2.2.1",
+    "@nextui-org/theme": "^2.2.5",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
