--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@internationalized/date": "^3.5.4",
     "@nextui-org/button": "^2.0.33",
     "@nextui-org/calendar": "^2.0.6",
+    "@nextui-org/modal": "^2.0.35",
     "@nextui-org/react": "^2.4.1",
     "@nextui-org/system": "^2.2.1",
     "@nextui-org/theme": "^2.2.5",
-    "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -28,7 +28,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
