--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/system": "^2.2.1",
     "@nextui-org/theme": "^2.2.5",
     "@react-aria/i18n": "^3.11.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
