--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-aria/i18n": "^3.11.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -28,6 +29,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
