--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/modal": "^2.0.35",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/select": "^2.2.2",
+    "@nextui-org/spinner": "^2.0.30",
     "@nextui-org/system": "^2.2.1",
     "@nextui-org/theme": "^2.2.5",
     "@react-aria/i18n": "^3.11.1",
